# WSL2-CDK

./: README.md
multi-tier-architecture/: .gitignore  README.md  app.py  pyproject.toml
multi-tier-architecture/includes/documentation/: documentation.md  project_documentation.md
multi-tier-architecture/multi_tier_architecture/: multi_tier_architecture_stack.py  user-data.sh
multi-tier-architecture/security/: iam_stack.py
multi-tier-architecture/tests/unit/: test_multi_tier_architecture_stack.py
