[project]
name = "multi-tier-architecture"
version = "0.1.0"
description = "A CDK Python app"
requires-python = ">=3.8"
dependencies = [
    "aws-cdk-lib>=2.0.0",
    "constructs>=10.0.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["multi_tier_architecture"]
